--- a/index.html
+++ b/index.html
@@ -2,9 +2,123 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>Our Products - Furmate</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Furmate - Smart Pet Companion</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: "Segoe UI", sans-serif;
+      line-height: 1.6;
+      background-color: #fefefe;
+      color: #333;
+    }
+
+    header {
+      background-color: #f8f9fa;
+      padding: 15px 20px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #333;
+      margin: 0 10px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #00aaff;
+    }
+
+    .hero {
+      background-color: #dff6ff;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 1.2em;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    section h2 {
+      font-size: 1.8em;
+      margin-bottom: 20px;
+      border-left: 5px solid #00aaff;
+      padding-left: 10px;
+    }
+
+    footer {
+      background-color: #f1f1f1;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #555;
+      margin-top: 40px;
+    }
+
+    .contact-form {
+      line-height: 2;
+    }
+
+    .news-list {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .news-item {
+      display: flex;
+      align-items: flex-start;
+      gap: 20px;
+      background-color: #f9f9f9;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    .news-item img {
+      max-width: 200px;
+      height: auto;
+      border-radius: 5px;
+    }
+
+    .news-content h3 {
+      margin-bottom: 10px;
+    }
+
+    .news-content a {
+      text-decoration: none;
+      color: #007acc;
+    }
+
+    .news-content a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
+
 <body>
 
   <!-- 導覽列 -->
