--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PawSee 智慧寵物項圈新聞 - Furmate</title>
+  <title>Furmate 智慧寵物項圈新聞 - Furmate</title>
   <style>
     * {
       box-sizing: border-box;
@@ -119,27 +119,38 @@
     </nav>
   </header>
 
-  <section class="news-article">
-    <img src="images/dogs.png" style="width: 60%; max-width: 600px; height: auto;" alt="兩隻狗狗在草地上玩耍">
-    <div class="caption">圖說：「PawSee」讓毛孩自在探索，飼主安心守護。</div>
-    <br>
-    <h1>「PawSee 智慧寵物項圈」震撼亮相：用科技守護毛孩的每一天</h1>
-    <br>
-    <p><strong>【高雄訊】</strong> 一群來自高雄大學電機系的學生團隊近日推出創新產品「PawSee 智慧寵物項圈」，引起寵物愛好者與科技圈的熱烈關注。這款項圈不僅能夠追蹤寵物位置、即時監測健康數據，還內建鏡頭，讓飼主得以透過手機即時查看毛孩的視角，感受牠們的生活日常。</p>
-    <p>團隊表示：「我們設計這款項圈的初衷，是希望透過溫柔而聰明的科技，讓飼主與寵物之間建立更深的連結。我們相信，科技不應只是冰冷的裝置，更應成為情感的橋樑。」</p>
-    <br>
-    <p><strong>突破性功能一覽：</strong></p>
-    <ul>
-      <li>📍 GPS即時定位：防止寵物走失，歷史路徑一目了然</li>
-      <li>❤️ 心跳與活動監測：健康狀況數據化，預防風險</li>
-      <li>📷 第一視角鏡頭：用毛孩的視角探索世界</li>
-      <li>📡 與智慧手環配對（選配）：讓飼主隨時掌握寵物狀態</li>
-    </ul>
-    <br>
-    <p>這款產品目前已進入原型測試階段，並預計在未來半年內展開募資活動。初步市場調查顯示，有高達 78% 的受訪飼主對此項圈表示濃厚興趣，尤其在都市寵物家庭中需求度極高。</p>
-    <br>
-    <p><em>「PawSee 團隊」由五位跨領域同學組成，包含硬體設計、AI演算法、行銷企劃與使用者體驗設計。他們期望透過這項產品，打開寵物科技新藍海，並打造毛孩的數位互動空間。</em></p>
-  </section>
+ <section class="news-article">
+  <img src="images/dogs.png" style="width: 60%; max-width: 600px; height: auto;" alt="Two dogs playing on the grass">
+  <div class="caption">Caption: “Furmate” empowers pets to explore freely while keeping owners reassured.</div>
+  <br>
+  <h1>Furmate Smart Pet Collar Debuts: Empowering Pet Care Through Technology</h1>
+  <br>
+  <p><strong>[Kaohsiung]</strong> A team of students from the Department of Electrical Engineering at National University of Kaohsiung has unveiled an innovative product — the <strong>Furmate Smart Pet Collar</strong>. This breakthrough device has quickly gained attention from both pet lovers and tech enthusiasts. It offers real-time GPS tracking, health monitoring, and even a built-in camera to let owners see the world from their pet’s perspective.</p>
+  
+  <div class="caption">Close-up of the Furmate collar showcasing its integrated camera and sleek design.</div>
+  <br>
+  
+  <p>The team shared: “Our goal was to create a technology that’s not just intelligent but compassionate — a bridge between pet and owner. We believe technology should be more than cold hardware; it should strengthen emotional bonds.”</p>
+  <br>
+
+  <p><strong>Key Features:</strong></p>
+  <ul>
+    <li>📍 <strong>Real-Time GPS Tracking:</strong> Prevents pets from getting lost with full location history.</li>
+    <li>❤️ <strong>Health Monitoring:</strong> Tracks heart rate and activity levels to identify early health risks.</li>
+    <li>📷 <strong>First-Person Camera:</strong> Experience daily life from your pet’s point of view.</li>
+    <li>📡 <strong>Optional Wristband Pairing:</strong> Allows owners to check in on their pets anytime.</li>
+  </ul>
+
+  <img src="images/app.jpg" style="width: 55%; max-width: 550px; height: auto;" alt="Mobile app interface of Furmate">
+  <div class="caption">The companion app lets you view live footage, track health, and set safe zones.</div>
+  <br>
+
+  <p>The product is currently in its prototype testing phase and is expected to launch a crowdfunding campaign within the next six months. Early market surveys reveal that up to 78% of surveyed pet owners express strong interest, especially among urban households.</p>
+  <br>
+  
+  <p><em>The Furmate team consists of six students specializing in hardware design, AI algorithms, marketing strategy, and user experience. They aim to carve out a new space in pet technology and create a digitally connected world for furry companions.</em></p>
+</section>
+
 
   <footer>
     &copy; 2025 Furmate Inc. all rights reserved.
