--- a/index.html
+++ b/index.html
@@ -112,7 +112,17 @@
       border-radius: 10px;
       margin: 10px 0;
     }
+    .select-none {
+      user-select: none;
+    }
+    .evasion {
+      transition: transform 0.2s ease;
+    }
+    .evasion:hover {
+      transform: translateX(50px);
+    }
   </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 
@@ -168,15 +178,59 @@
       </div>
     </div>
   </section>
+  
+<!-- 支持我們 / 聯絡我們 -->
+<section id="donate-contact" style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: space-between; align-items: flex-start; padding: 2rem;">
+  <!-- 支持我們 -->
+  <div style="flex: 1; min-width: 280px;">
+    <h2>Donate & Contact us</h2>
+    <div class="box">
+      <div><strong>Please select your budget range：</strong></div>
+      <div>
+        <label><input type="radio" name="budget" value="0"> Under $1,000</label><br>
+        <label><input type="radio" name="budget" value="1"> $1,000 - $5,000</label><br>
+        <label><input type="radio" name="budget" value="2"> $5,000 - $10,000</label><br>
+        <label><input type="radio" name="budget" value="3"> $10,000 and above</label>
+      </div>
+    </div>
+<br>
+    <div id="infoBox" class="box">
+      <div class="text-item">Phone：0987-654-321</div>
+      <div class="text-item">E-mail：Furmate2025@gmail.com</div>
+      <div class="text-item">Address：700, Kaohsiung University Rd., Nanzih District, Kaohsiung 811, Taiwan, R.O.C.</div>
+    </div>
+  </div>
+</section>
 
-  <!-- 聯絡我們 -->
-  <section id="contact">
-    <h2>Contact us</h2>
-    <form class="contact-form">
-      <p>📧 Mail: Furmate2025@gmail.com</p>
-      <p>📍 Address: 700, Kaohsiung University Rd., Nanzih District, Kaohsiung 811, Taiwan, R.O.C.</p>
-    </form>
-  </section>
+<script>
+  const radios = document.querySelectorAll('input[name="budget"]');
+  const infoBox = document.getElementById('infoBox');
+
+  radios.forEach(radio => {
+    radio.addEventListener('change', () => {
+      const value = parseInt(radio.value, 10);
+      if (value === 0) {
+        infoBox.classList.add('select-none');
+        document.querySelectorAll('.text-item').forEach(el => el.classList.add('evasion'));
+      } else {
+        infoBox.classList.remove('select-none');
+        document.querySelectorAll('.text-item').forEach(el => el.classList.remove('evasion'));
+      }
+    });
+  });
+</script>
+
+<style>
+  .select-none {
+    user-select: none;
+  }
+  .evasion {
+    transition: transform 0.3s ease;
+  }
+  .evasion:hover {
+    transform: translateX(60px);
+  }
+</style>
 
   <!-- 頁腳 -->
   <footer>
