--- a/band.html
+++ b/band.html
@@ -122,6 +122,7 @@
     <ul>
       <li>🔄 Synchronizes with the collar</li>
       <li>📲 Receives real-time alerts</li>
+      <img src="images/band.jpg" style="width: 100%; max-width: 300px; height: auto;" alt="產品圖片">
     </ul>
   </section>
   <footer>
